# winman

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  install_script.sh
examples/: test.c
inc/: tasks_mgmt.h  widgets.h  winman.h  winman_types.h
src/: tasks_mgmt.c  tasks_mgmt.h  widgets.c  winman.c  winman.h  winman_types.h
winman/: test.c  winman.c  winman.h  winman_types.h
winman/src/: winman.c  winman.h  winman_types.h
